# autozhy_logisim_report

./: .gitignore  ARCHITECTURE.md  INIT.md  README.md  THANKS.md  main.py  pyproject.toml  run_automated_synthesis.py  synthesis_log.txt  test_out.txt
config/: config-template.toml  config.toml
data_in/: 厦门大学计算机组成原理实验报告样本（第2次实验）(2).docx
docs/: INTERACTION.md  PIPELINE.md  SPECIFICATIONS.md  architecture_migration.md  gui_automation_history.md  prompt_standards.md  testing_guide.md
docs/adr/: 0001-agent-role-definition.md  0002-tech-stack.md
docs/examples/: EXAMPLE_OUTPUT.md  SPEC.md
output/: integration_test_report.md
prompts/design/: decompose.txt  design_logic.txt  design_patch.txt  execution.txt  strategy.txt  verification.txt
prompts/parsing/: phase1_classify.txt  phase2_verify_detail.txt  phase3_check.txt  phase3_split.txt  task_extraction.txt
prompts/report/: analysis.txt  analysis_refinement.txt  challenge_split.txt  intro.txt
prompts/verification/: blueprint.txt  cropping.txt  repair.txt  switch.txt  ui_action.txt
scratch/: bench_ocr.py  check_alignment.py  check_tars.py  debug_ocr.py  debug_windows.py  deep_diag_gpu.py  deep_diagnostic.py  draw_grid.py  trace_logisim.py
src/agents/: content_parsing.py  design_agent.py  execution_agent.py  report_agent.py  strategy_agent.py  verification_agent.py
src/core/: models.py
src/logisim_logic/: API.md  README.md  __init__.py  __main__.py  diagnostics.py  geometry.py  graph.py  high_level.py  java_types.py  layout.py  logic_builder.py  logical.py  model.py  project_tools.py  pyproject.toml  rebuild_support.py  rom.py  selection.py  template_tools.py
src/utils/: ai_utils.py  cache_manager.py  config_loader.py  docx_outline.py  gui_utils.py  internal_verifier.py  llm_client.py  logic_verifier.py  ocr_helper.py  sim_runner.py  tars_bridge.py  tool_definitions.py  (+2 more)
tests/: check_attachments.py  conftest.py  debug_adder.py  debug_logic.py  debug_multiplier.py  debug_nets.py  debug_nets2.py  debug_raw.py  debug_stabilization.py  deep_inspect.py  deep_inspect_v3.py  inspect_circ.py  test_agent_workflow.py  test_config.py  test_design_agent.py  test_design_integration_logic.py  test_design_smoketest.py  test_direct_api.py  test_final_grading.py  test_gui_utils.py  test_integration_gui.py  test_lifecycle.py  test_live_api.py  test_openai_bridge.py  test_openai_gemini.py  test_parsing_agent.py  test_report_agent.py  test_simulator_test1.py  test_simulator_test2.py  test_verification_custom.py  test_xml_logic.py  verify_circuits.py
workspace/: test_init.circ
(+28 files in other folders)
