[project]
name = "autozhy-logisim-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "ollama>=0.6.1",
    "patool>=4.0.4",
    "pdfplumber>=0.11.9",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pygetwindow>=0.0.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-docx>=1.2.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "ui-tars>=0.5.1",
]
