[project]
name = "autozhy-logisim-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "ollama>=0.6.1",
    "onnxruntime-gpu[cuda,cudnn]>=1.24.4",
    "patool>=4.0.4",
    "pdfplumber>=0.11.9",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pygetwindow>=0.0.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-docx>=1.2.0",
    "rapidocr-onnxruntime>=1.4.4",
    "ui-tars>=0.5.1",
    "torch==2.9.1+cu128",
    "torchaudio==2.9.1+cu128",
    "torchvision==0.24.1",
]

# 1. 声明索引并设置为显式使用
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }
