[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logisim-logic"
version = "0.1.0"
description = "Helpers for parsing Logisim .circ XML and extracting a coordinate-light logic view"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["logisim_logic"]

[tool.setuptools.package-dir]
logisim_logic = "."
